2001-07-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* include/cppunit/Exception.h:
	* include/cppunit/Test.h:
	* include/cppunit/TestCaller.h:
	* include/cppunit/TestCase.h:
	* include/cppunit/TestFailure.h:
	* include/cppunit/TestListener.h:
	* include/cppunit/TestSuite.h:
	* include/cppunit/extensions/RepeatedTest.h:
	* include/cppunit/extensions/TestDecorator.h:
	* src/cppunit/TestCase.cpp:  Add documentation.

2001-07-13  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* examples/cppunittest/TestAssertTest.h:
	* examples/cppunittest/TestAssertTest.cpp: Add tests 
	for CPPUNIT_ASSERT_EQUAL.

2001-07-12  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set to version 1.5.6.  On the assumption that
	backwards compatibility has been broken (though I'm not certain),
	set the binary age and interface age to zero.

	* examples/cppunittest/TestFailureTest.h:
	* include/cppunit/Exception.h:
	* include/cppunit/NotEqualException.h:
	* src/cppunit/Exception.cpp:
	* src/cppunit/NotEqualException.cpp: Add "throw()" to overridden
	std::exception destructors; required for GCC 3.0.

2001-07-07  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* include/cppunit/Makefile.am: Clean config-auto.h using
	DISTCLEANFILES.

	* doc/Makefile.am: Temporarily disable manpage installation.  
	Fix html installation to ensure files removed by uninstall.

	* src/cppunit/estring.h: Removed.

	* src/cppunit/Makefile.am:
	* src/cppunit/TestCase.cpp:
	* src/cppunit/TextTestResult.cpp: Recode to avoid use of estring.

	* examples/cppunittest/OrthodoxTest.h: Add const qualifier
	to operator== methods.

	* include/cppunit/config-bcb5.h:
	* include/cppunit/config-msvc6.h: Define CPPUNIT_HAVE_SSTREAM to 1.

	* config/ac_cxx_have_sstream.m4: New.  Defines macro
	AC_CXX_HAVE_SSTREAM.  Taken from the autoconf archive.

	* config/ac_cxx_have_strstream.m4: New.  Copy of above,
	modified to check for presence of strstream; defines
	macro AC_CXX_HAVE_STRSTREAM.
