@@ -1,8 +1,10 @@
 #ifndef CPPUNIT_TESTCALLER_H    // -*- C++ -*-
 #define CPPUNIT_TESTCALLER_H
 
-#include <cppunit/TestCase.h>
 #include <cppunit/Exception.h>
+#include <cppunit/TestCase.h>
+#include <cppunit/TestFixture.h>
+
 
 #if CPPUNIT_USE_TYPEINFO_NAME
 #  include <cppunit/extensions/TypeInfoHelper.h>
